fix bug  error save date time

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -5,20 +5,18 @@
     <meta charset="utf-8">
     <title>Form</title>
     <script src="jquery-3.3.1.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/Form-css.css">
-    <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css">
-    <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-    <link href="dist/css/bootstrap-datepicker.css" rel="stylesheet" />
-    <script src="dist/js/bootstrap-datepicker-custom.js"></script>
-    <script src="dist/locales/bootstrap-datepicker.th.min.js" charset="UTF-8"></script>
-    <script>
-        $(document).ready(function () {
+    <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
+    <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
+    <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
+    <link href="dist/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist/css/bootstrap-datepicker.css}"/>
+    <script src="dist/js/bootstrap-datepicker-custom.js" th:src="@{/dist/js/bootstrap-datepicker-custom.js}"></script>
+    <script src="dist/locales/bootstrap-datepicker.en-GB.min.js" charset="UTF-8"></script>
+    <script th:inline="javascript">
+         $(document).ready(function () {
             $('.datepicker').datepicker({
                 format: 'dd/mm/yyyy',
-                todayBtn: true,
-                language: 'th',             //เปลี่ยน label ต่างของ ปฏิทิน ให้เป็น ภาษาไทย   (ต้องใช้ไฟล์ bootstrap-datepicker.th.min.js นี้ด้วย)
-                thaiyear: true              //Set เป็นปี พ.ศ.
+                todayBtn: true
             }).datepicker("setDate", "0");  //กำหนดเป็นวันปัจุบัน
         });
     </script>
@@ -39,6 +37,7 @@
       <h3>แบบฟอร์มการอใช้บริการ</h3>
       <h5>Project Detail</h5>
       <form action="/form#" th:action="@{/form}" th:object="${requestForm}" method="post">
+          <input type="hidden" id="id" name="id" th:field="*{id}">
     <div class="row">
           <div class="col-10"></div>
           <div class="col-15">
