--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,96 +1,31 @@
 <!DOCTYPE html>
+<html>
 <head>
-<!-- META SECTION -->
-<title>Spring Framework Guru JdbcTemplate, Thymeleaf, JPA Example</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<!-- END META SECTION -->
-<!--  BEGIN STYLE -->
-<style>
-table, th, td {
-    border: 1px solid black;
-    padding: 1px;
-}
-</style>
-<!--  END STYLE -->
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<title>Form</title>
+	<script src="./jquery-3.3.1.js"></script>
+	<link rel="stylesheet" type="text/css" href="./Form-css.css">
+	<link rel="stylesheet" type="text/css" href="./vertical-menu-css.css">
+	<link rel="stylesheet" type="text/css" href="./table-case-css.css">
 </head>
-<body>
-		<div>
-			<h2>Current Dogs In Rescue</h2>
-			<table>
-				<thead>
-					<tr>
-						<th>ID</th>
-						<th>Name</th>
-						<th>Rescue Date</th>
-						<th>Vaccinated</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="dogs : ${dogs}">
-						<td th:text="${dogs.id}">Text ...</td>
-						<td th:text="${dogs.name}">Text ...</td>
-						<td th:text="${dogs.rescued}">Text ...</td>
-						<td th:text="${dogs.vaccinated}">Text...</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		<!--  begin form for finding at risk dogs -->
-		<h2>Find Dogs That Need Vaccines</h2>
-		<form action="#" th:action="@{/}" th:object="${search}">
-		<label for="search_input">Search:</label> <input name="search"
-			id="search"  >
-		</input>
-		<div th:if="${not #lists.isEmpty(search)}">
-			<h3>Search Results Of At Risk Dogs</h3>
-			<table>
-				<thead>
-					<tr>
-						<th>ID</th>
-						<th>Name</th>
-						<th>Vaccinated</th>
-						<th>Rescued</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="search : ${search}">
-						<td th:text="${search.id}">Text ...</td>
-						<td th:text="${search.name}">Text ...</td>
-						<td th:text="${search.vaccinated}">Text ...</td>
-						<td th:text="${search.rescued}">Text...</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</form>
+<body style="font-family:Verdana;">
+<div class="Banner" style="background-color:#f1f1f1;padding:15px;">
+	<h1>Banner web</h1>
+</div>
+<div style="overflow:auto">
+	<div class="vertical-menu"> <a href="./form.html">Form</a> <a href="./all-case.html" >All Case</a> <a href="#">Report</a> </div>		</form>
+	<h2>index</h2>
+</div>
+<div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:12px;">
 	<div>
-	<h2>Add A Dog</h2>
-	<form action="#" th:action="@{/}" method="post">
-	<label>Name<input type="text" name="name" id="name"></input></label>
-	<label>Vaccinated<input type="text" name="vaccinated" id="vaccinated"></input></label>
-	<label>Rescued<input type="text" name="rescued" id="rescued"></input></label>
-	<input type="submit" value="Submit"></input>
-	</form>
+		<h3> contact us </h3>
+		<div> Email : nattapoo@ais.co.th </div>
+		<div> phone : 02-2222222 </div>
 	</div>
-	<div>
-	<h2>Delete A Dog</h2>
-	<form action="/delete" th:action="@{/delete}" method="post">
-	<label>Name<input type="text" name="name" id="name"></input></label>
-	<label>ID<input type="text" name="id" id="id"></input></label>
-	<input type="submit" value="Submit"></input>
-	</form>
-	</div>
-	<div>
-	<h2>Return Generated Key When Adding A Dog</h2>
-		<form action="/genkey" th:action="@{/genkey}" method="post">
-	<label>Name<input type="text" name="name" id="name"></input></label>
-	<label>Vaccinated<input type="text" name="vaccinated" id="vaccinated"></input></label>
-	<label>Rescued<input type="text" name="rescued" id="rescued"></input></label>
-	<input type="submit" value="Submit"></input>
-	</form>
-	</div>
+</div>
+<script>
+w3IncludeHTML();
+</script>
 </body>
 </html>
