fix error call page

--- a/src/main/resources/templates/all-case.html
+++ b/src/main/resources/templates/all-case.html
@@ -14,7 +14,7 @@
   <h1>Banner web</h1>
 </div>
 <div style="overflow:auto">
-  <div class="vertical-menu"> <a href="./form.html">Form</a> <a href="./all-case.html" class="active">All Case</a> <a href="#">Report</a> </div>
+  <div class="vertical-menu"> <a href="./form">Form</a> <a href="./all-case" class="active">All Case</a> <a href="#">Report</a> </div>
 	<div class="search-case">
 		
 		<form>
