--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -28,8 +28,8 @@
     </div>
 <!--  menu -->
 <ul>
-      <li><a class="active" href="./form.html">Form</a></li>
-      <li><a href="./all-case.html">All Case</a></li>
+      <li><a class="active" href="./form">Form</a></li>
+      <li><a href="./all-case">All Case</a></li>
       <li><a href="#">Report</a></li>
     </ul>
 <!--  container -->
