add hind date format

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -327,7 +327,7 @@
         <label>On Test/Staging Deploy</label>
       </div>
           <div class="col-65">
-        <input id="targetStartDate" name="targetStartDate" class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetStartDate}">
+        <input id="targetStartDate" name="targetStartDate" class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetStartDate}"> dd/mm/yyyy
         <!--        <input id="onTest" name="onTest" type="text">--> 
       </div>
         </div>
@@ -338,7 +338,7 @@
       </div>
           <div class="col-65"> 
         <!--        <input id="finishDate" name="finishDate" type="text">-->
-        <input id="targetFinishDate" class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetFinishDate}">
+        <input id="targetFinishDate" class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetFinishDate}"> dd/mm/yyyy
       </div>
         </div>
     <div class="row">
