--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<title>Form</title>
-	<script src="./jquery-3.3.1.js"></script>
-	<link rel="stylesheet" type="text/css" href="./Form-css.css">
-	<link rel="stylesheet" type="text/css" href="./vertical-menu-css.css">
-	<link rel="stylesheet" type="text/css" href="./table-case-css.css">
+	<link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
 </head>
 <body style="font-family:Verdana;">
 <div class="Banner" style="background-color:#f1f1f1;padding:15px;">
