add table fix css

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 	<h1>Banner web</h1>
 </div>
 <div style="overflow:auto">
-	<div class="vertical-menu"> <a href="./form">Form</a> <a href="./all-case" >All Case</a> <a href="#">Report</a> </div>		</form>
+	<div class="vertical-menu"> <a href="./form">Form</a> <a href="./search-case" >All Case</a> <a href="#">Report</a> </div>		</form>
 	<h2>index</h2>
 </div>
 <div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:12px;">
