--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,6 +7,7 @@
     <script src="jquery-3.3.1.js"></script>
     <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
+        <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
     <link href="dist/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist/css/bootstrap-datepicker.css}"/>
@@ -28,8 +29,8 @@
     </div>
 <!--  menu -->
 <ul>
-      <li><a class="active" href="./form">Form</a></li>
-      <li><a href="./all-case">All Case</a></li>
+      <li><a class="active" href="/form">Form</a></li>
+      <li><a href="/search-case">All Case</a></li>
       <li><a href="#">Report</a></li>
     </ul>
 <!--  container -->
