--- a/src/main/resources/templates/search-case.html
+++ b/src/main/resources/templates/search-case.html
@@ -14,7 +14,7 @@
   <h1>Banner web</h1>
 </div>
 <div style="overflow:auto">
-  <div class="vertical-menu"> <a href="./form">Form</a> <a href="./all-case" class="active">All Case</a> <a href="#">Report</a> </div>
+  <div class="vertical-menu"> <a href="/form">Form</a> <a href="/search-case" class="active">All Case</a> <a href="#">Report</a> </div>
 	<div class="search-case">
 		
 		<form>
@@ -37,39 +37,14 @@
     <h2>All case</h2>
     <table id="table-case">
       <tr>
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Country</th>
+        <th>Project Id</th>
+        <th>Project Name</th>
+          <th>Contact</th>
       </tr>
-      <tr>
+        <tr th:each="case : ${caseList}">
+        <td><a th:text="${case.projectId}" th:href="${'/form/' + case.id}"></a></td>
         <td>Alfreds Futterkiste</td>
         <td>Maria Anders</td>
-        <td>Germany</td>
-      </tr>
-      <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
-        <td>Mexico</td>
-      </tr>
-      <tr>
-        <td>Ernst Handel</td>
-        <td>Roland Mendel</td>
-        <td>Austria</td>
-      </tr>
-      <tr>
-        <td>Island Trading</td>
-        <td>Helen Bennett</td>
-        <td>UK</td>
-      </tr>
-      <tr>
-        <td>Laughing Bacchus Winecellars</td>
-        <td>Yoshi Tannamuri</td>
-        <td>Canada</td>
-      </tr>
-      <tr>
-        <td>Magazzini Alimentari Riuniti</td>
-        <td>Giovanni Rovelli</td>
-        <td>Italy</td>
       </tr>
     </table>
   </div>
