change path file

--- a/src/main/resources/templates/searchCase.html
+++ b/src/main/resources/templates/searchCase.html
@@ -17,7 +17,7 @@
 <div style="overflow:auto">
     <ul>
         <li><a href="/form">Form</a></li>
-        <li><a class="active" href="/search-case">All Case</a></li>
+        <li><a class="active" href="/searchCase">All Case</a></li>
         <li><a href="#">Report</a></li>
     </ul>
     <div class="search-case">
