--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -30,7 +30,7 @@
 <!--  menu -->
 <ul>
       <li><a class="active" href="/form">Form</a></li>
-      <li><a href="/search-case">All Case</a></li>
+      <li><a href="/searchCase">All Case</a></li>
       <li><a href="#">Report</a></li>
     </ul>
 <!--  container -->
