--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -7,7 +7,8 @@
     <script src="jquery-3.3.1.js"></script>
     <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
-        <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
+    <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
+    <link rel="stylesheet" type="text/css" href="css/button.css" th:href="@{/css/button.css}">
     <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
     <script src="bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
     <link href="dist/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist/css/bootstrap-datepicker.css}"/>
