--- a/src/main/resources/templates/searchCase.html
+++ b/src/main/resources/templates/searchCase.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
 	<link rel="stylesheet" type="text/css" href="css/table-case-css.css" th:href="@{/css/table-case-css.css}">
+    <link rel="stylesheet" type="text/css" href="css/button.css" th:href="@{/css/button.css}">
 </head>
 <body style="font-family:Verdana;">
 <div class="Banner" style="background-color:#f1f1f1;padding:15px;">
