--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -353,7 +353,7 @@
       </div>
         </div>
     <div class="row">
-          <input type="submit" value="Submit">
+          <input class="button" type="submit" value="Submit">
         </div>
   </form>
     </div>
