--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,23 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>Form</title>
-    <script src="jquery-3.3.1.js"></script>
+    <script src="jquery-3.3.1.js" th:src="@{/jquery-3.3.1.js}"></script>
     <link rel="stylesheet" type="text/css" href="css/Form-css.css" th:href="@{/css/Form-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/menu-bar-css.css}">
     <link rel="stylesheet" type="text/css" href="css/menu-bar-css.css" th:href="@{/css/row-col.css}">
     <link rel="stylesheet" type="text/css" href="css/button.css" th:href="@{/css/button.css}">
-    <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
-    <link href="dist/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist/css/bootstrap-datepicker.css}"/>
-    <script src="dist/js/bootstrap-datepicker-custom.js" th:src="@{/dist/js/bootstrap-datepicker-custom.js}"></script>
-    <script src="dist/locales/bootstrap-datepicker.en-GB.min.js" charset="UTF-8"></script>
+    <link href="./bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" />
+    <script src="./bootstrap-3.3.7-dist/js/bootstrap.js" th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
+    <link href="./dist/css/bootstrap-datepicker.css" rel="stylesheet" th:href="@{/dist/css/bootstrap-datepicker.css}"/>
+    <script src="./dist/js/bootstrap-datepicker-custom.js" th:src="@{/dist/js/bootstrap-datepicker-custom.js}"></script>
+    <script src="./dist/locales/bootstrap-datepicker.en-GB.min.js" th:src="@{/dist/locales/bootstrap-datepicker.en-GB.min.js}" charset="UTF-8" ></script>
     <script th:inline="javascript">
          $(document).ready(function () {
             $('.datepicker').datepicker({
                 format: 'dd/mm/yyyy',
                 todayBtn: true
-            }).datepicker("setDate", "0");  //กำหนดเป็นวันปัจุบัน
+            }).datepicker("setDate", "1");  //กำหนดเป็นวันปัจุบัน
         });
+
     </script>
     </head>
     <body style="font-family:Verdana;">
@@ -332,7 +333,7 @@
         <label>On Test/Staging Deploy</label>
       </div>
           <div class="col-65">
-        <input id="targetStartDate" name="targetStartDate" th:class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetStartDate}"> dd/mm/yyyy
+        <input id="targetStartDate" name="targetStartDate" th:class="datepicker" data-date-format="dd/mm/yyyy" th:field="*{targetStartDate}"> dd/mm/yyyy
         <!--        <input id="onTest" name="onTest" type="text" >-->
       </div>
         </div>
@@ -343,7 +344,7 @@
       </div>
           <div class="col-65"> 
         <!--        <input id="finishDate" name="finishDate" type="text" ">-->
-        <input id="targetFinishDate" name="targetFinishDate" th:class="datepicker" data-date-format="mm/dd/yyyy" th:field="*{targetFinishDate}"> dd/mm/yyyy
+        <input  id="targetFinishDate" name="targetFinishDate" th:class="datepicker" data-date-format="dd/mm/yyyy" th:field="*{targetFinishDate}" > dd/mm/yyyy
       </div>
         </div>
     <div class="row">
