add button logout

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -32,8 +32,9 @@
 <!--  menu -->
 <ul>
       <li><a class="active" href="/form">Form</a></li>
-      <li><a href="/searchCase">All Case</a></li>
+      <li><a href="/searchCase">Search Case</a></li>
       <li><a href="#">Report</a></li>
+    <li style="float:right"><a href="/logout">[[${#httpServletRequest.remoteUser}]] [Logout]</a></li>
     </ul>
 <!--  container -->
 <div class="container" >
