--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <div style="overflow:auto">
 	<ul>
 		<li><a href="/form">Form</a></li>
-		<li><a href="/searchCase">All Case</a></li>
+		<li><a href="/searchCase">Search Case</a></li>
 		<li><a href="#">Report</a></li>
 		<li style="float:right"><a href="/logout">[[${#httpServletRequest.remoteUser}]] [Logout]</a></li>
 	</ul><h2>index [[${#httpServletRequest.remoteUser}]]</h2>
